# oddo-test

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
core/: config.py  odoo_client.py  redis.py
