[project]
name = "oddo-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic[email]>=2.13.4",
    "pydantic-extra-types>=2.11.1",
    "pydantic-settings>=2.14.2",
    "odoorpc>=0.10.1",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "python-dotenv>=1.2.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "fastapi-limiter==0.1.6",
    "pyjwt>=2.13.0",
]
